# dust

./: Cargo.toml  README.md  test.rs
crates/dust/: Cargo.toml
crates/dust-sys/: Cargo.toml
crates/dust-sys/src/: calculator.rs  error.rs  lexer.rs  lib.rs  ops.rs  parser.rs  token.rs
crates/dust-sys/src/parser/: expression.rs  statement.rs
crates/dust/src/: calculator.rs  cli.rs  lexer.rs  main.rs  ops.rs  parser.rs  token.rs
crates/dust/src/parser/: expression.rs
crates/dust/test/: lexer.rs
